--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Serverside/PC Web Page Templating system that is similar to the popular web frameworks",
   "main": "dist/index.js",
   "bin": "dist/index.js",
@@ -24,5 +24,8 @@
   "devDependencies": {
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "totjs": "^0.0.5"
   }
 }
