--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "0.8.1",
+  "version": "1.0.0",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": "dist/index.js",
@@ -36,6 +36,7 @@
     "@rollup/plugin-virtual": "^3.0.1",
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
+    "entities": "^4.5.0",
     "express": "^4.18.2",
     "rollup": "^3.26.2",
     "totjs": "^0.0.5",
