--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": "dist/index.js",
@@ -37,6 +37,7 @@
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "markdown-it": "^13.0.1",
     "rollup": "^3.26.2",
     "totjs": "^0.1.2",
     "ws": "^8.13.0"
