--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "rinojs",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
-    "pack": "npx webpack --config webpack.config.js",
     "test": "node test/test.js"
   },
   "repository": {
@@ -37,13 +36,10 @@
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "markdown-it": "^13.0.1",
     "rollup": "^3.26.2",
     "totjs": "^0.1.2",
     "ws": "^8.13.0"
-  },
-  "devDependencies": {
-    "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1"
   }
 }
