--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rinojs",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/test.js",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -37,9 +38,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
-    "markdown-it": "^13.0.1",
+    "marked": "^7.0.5",
     "rollup": "^3.26.2",
     "totjs": "^0.1.2",
     "ws": "^8.13.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-json": "^6.0.0"
   }
 }
