--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "rinojs",
-  "version": "1.5.19",
+  "version": "2.0.0",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": {
     "rinojs": "dist/index.js"
   },
+  "type": "module",
   "scripts": {
     "test": "cd test && node test.js",
+    "test-generate": "cd test && node generate.js",
     "pack": "node pack/index.js",
     "build": "rollup -c"
   },
@@ -22,7 +24,6 @@
     "static-site-generation",
     "static-site-building",
     "frontend-development",
-    "templating-tool",
     "rinojs",
     "webframework"
   ],
@@ -33,19 +34,19 @@
   },
   "homepage": "https://rinojs.org/",
   "dependencies": {
-    "@rollup/plugin-commonjs": "^25.0.2",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-virtual": "^3.0.1",
-    "chokidar": "^3.5.3",
-    "clean-css": "^5.3.2",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-virtual": "^3.0.2",
+    "chalk": "^5.3.0",
+    "chokidar": "^4.0.1",
+    "clean-css": "^5.3.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "marked": "^7.0.5",
-    "rollup": "^3.26.2",
-    "totjs": "^0.1.2",
-    "ws": "^8.13.0"
+    "express": "^4.21.1",
+    "fs-extra": "^11.2.0",
+    "markdown-it": "^14.1.0",
+    "rollup": "^4.27.0",
+    "ws": "^8.18.0"
   }
 }
