--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "2.0.0",
+  "version": "2.0.3",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": {
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "cd test && node test.js",
     "test-generate": "cd test && node generate.js",
+    "test-sitemap": "cd test && node sitemap.js",
     "pack": "node pack/index.js",
     "build": "rollup -c"
   },
@@ -47,6 +48,7 @@
     "fs-extra": "^11.2.0",
     "markdown-it": "^14.1.0",
     "rollup": "^4.27.0",
+    "sharp": "^0.33.5",
     "ws": "^8.18.0"
   }
 }
