--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "2.0.10",
+  "version": "2.1.1",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": {
@@ -39,6 +39,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@rollup/plugin-virtual": "^3.0.2",
     "chalk": "^5.3.0",
     "chokidar": "^4.0.1",
@@ -49,6 +50,8 @@
     "markdown-it": "^14.1.0",
     "rollup": "^4.27.0",
     "sharp": "^0.33.5",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
     "ws": "^8.18.0"
   }
 }
