--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": {
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/rinojs/rinojs/discussions"
   },
-  "homepage": "https://rino.opdev1004.com/",
+  "homepage": "https://rinojs.org/",
   "dependencies": {
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-json": "^6.1.0",
