--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "2.2.4",
+  "version": "2.3.0",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": {
@@ -11,6 +11,7 @@
     "test": "cd test && node test.js",
     "test-generate": "cd test && node generate.js",
     "test-sitemap": "cd test && node sitemap.js",
+    "test-ssr": "cd test && node test-ssr.js",
     "pack": "node pack/index.js",
     "build": "rollup -c"
   },
@@ -35,23 +36,24 @@
   },
   "homepage": "https://rinojs.org/",
   "dependencies": {
-    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@rollup/plugin-virtual": "^3.0.2",
-    "chalk": "^5.3.0",
-    "chokidar": "^4.0.1",
+    "chalk": "^5.4.1",
+    "chokidar": "^4.0.3",
     "clean-css": "^5.3.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "fs-extra": "^11.2.0",
+    "express": "^4.21.2",
+    "fs-extra": "^11.3.0",
     "markdown-it": "^14.1.0",
-    "rollup": "^4.27.0",
+    "rollup": "^4.35.0",
     "sharp": "^0.33.5",
+    "totjs": "^2.0.1",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.2",
-    "ws": "^8.18.0"
+    "typescript": "^5.8.2",
+    "ws": "^8.18.1"
   }
 }
