--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinojs",
-  "version": "2.17.2",
+  "version": "2.18.0",
   "description": "Fast learning, preprocessing, intuitive web framework",
   "main": "dist/index.js",
   "bin": {
@@ -54,7 +54,7 @@
     "express": "^4.21.2",
     "fs-extra": "^11.3.0",
     "markdown-it": "^14.1.0",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.2",
     "rollup": "^4.35.0",
     "sharp": "^0.33.5",
     "totjs": "^2.0.1",
@@ -63,8 +63,8 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.51.1",
-    "cypress": "^14.3.0",
-    "playwright": "^1.51.1"
+    "@playwright/test": "^1.57.0",
+    "cypress": "^15.7.0",
+    "playwright": "^1.57.0"
   }
 }
